Fixed layout test for reals. Changed \r\n to \n, fixing mass confusion.
        * fast/js/do-while-expression-value-expected.txt:
        * fast/js/do-while-expression-value.html:
        * fast/js/nested-function-scope.html:
        * fast/js/while-expression-value-expected.txt:
        * fast/js/while-expression-value.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26637 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/fast/js/do-while-expression-value.html
+++ b/LayoutTests/fast/js/do-while-expression-value.html
@@ -7,7 +7,7 @@ if (window.layoutTestController)
 
 function log(s)
 {
-    document.getElementById("console").appendChild(document.createTextNode(s + "\r\n"));
+    document.getElementById("console").appendChild(document.createTextNode(s + "\n"));
 }
 
 function shouldBe(a, b)
