--- a/LayoutTests/fast/js/while-expression-value.html
+++ b/LayoutTests/fast/js/while-expression-value.html
@@ -7,7 +7,7 @@ if (window.layoutTestController)
 
 function log(s)
 {
-    document.getElementById("console").appendChild(document.createTextNode(s + "\r\n"));
+    document.getElementById("console").appendChild(document.createTextNode(s + "\n"));
 }
 
 function shouldBe(a, b)
