Reviewed by Maciej.
        http://bugs.webkit.org/show_bug.cgi?id=15506
        editing/pasteboard/paste-into-anchor-text.html accesses an external resource

        Removed the external resource reference and made the test dump as text.

        * editing/pasteboard/paste-into-anchor-text-expected.txt: Copied from platform/mac/editing/pasteboard/paste-into-anchor-text-expected.txt.
        * editing/pasteboard/paste-into-anchor-text.html:
        * platform/mac/editing/pasteboard/paste-into-anchor-text-expected.checksum: Removed.
        * platform/mac/editing/pasteboard/paste-into-anchor-text-expected.png: Removed.
        * platform/mac/editing/pasteboard/paste-into-anchor-text-expected.txt: Removed.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26654 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/editing/pasteboard/paste-into-anchor-text.html
+++ b/LayoutTests/editing/pasteboard/paste-into-anchor-text.html
@@ -1,6 +1,8 @@
 <script>
-if (window.layoutTestController)
+if (window.layoutTestController) {
+     layoutTestController.dumpAsText();
      layoutTestController.dumpEditingCallbacks();
+}
 </script>
 <script type="text/javascript" src="../editing.js"></script>
 <div contenteditable>
@@ -12,7 +14,7 @@ if (window.layoutTestController)
                     <span class="Apple-style-span" style="text-decoration:underline;">
                         <td>
                             <a href="http://www.cantonrep.com/index.php?ID=373537&Category=17&subCategoryID=30" id=r-11i_1119206349>
-                                <img src=http://news.google.com/news?imgefp=Se6UJuKIqiUJ&imgurl=www.cantonrep.com/photos/2007/08/m_31mOhio_State.jpg width=80 height=80 alt="" border=1>
+                                <img src="" width=80 height=80 alt="" border=1>
                                 <br>
                                 <font size=-2>Canton Repository (subscription)</font>
                             </a>
