Reviewed by Brady.
        Make example actually work.
        
        * misc/DatabaseExample.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26800 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitSite/misc/DatabaseExample.html
+++ b/WebKitSite/misc/DatabaseExample.html
@@ -31,7 +31,7 @@ function saveNote()
     } catch(err) { }
     
     // If the table exists already, this is expected to fail - so lets ignore the errorcode
-    db.executeSql("INSERT INTO WebKitNotes VALUES (?, ?)", note, timestamp, [], function(result) {
+    db.executeSql("INSERT INTO WebKitNotes VALUES (?, ?)", [note, timestamp], function(result) {
         if (result.errorCode)
             alert("Failed to save note in database");
         else
