2007-10-20  Mark Rowe  <mrowe@apple.com>
        Rubber-stamped by Adam.

        Convert TIFFs to PNGs so that the demo page is fully-functional in the Gtk port.

        * misc/DatabaseExample.html:
        * misc/deleteButton.png: Added.
        * misc/deleteButton.tiff: Removed.
        * misc/deleteButtonPressed.png: Added.
        * misc/deleteButtonPressed.tiff: Removed.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26828 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitSite/misc/DatabaseExample.html
+++ b/WebKitSite/misc/DatabaseExample.html
@@ -17,7 +17,7 @@ body {
 }
 
 .closebutton {
-    background-image: url(deleteButton.tiff);
+    background-image: url(deleteButton.png);
     height: 30px;
     position: absolute;
     left: -15px;
@@ -26,7 +26,7 @@ body {
 }
 
 .closebutton:active {
-    background-image: url(deleteButtonPressed.tiff);
+    background-image: url(deleteButtonPressed.png);
 }
 
 .edit {
