Fixing an accidental change made in r25484.
        * editing/pasteboard/quirks-mode-br-1.html:
        * platform/mac/editing/pasteboard/quirks-mode-br-1-expected.checksum:
        * platform/mac/editing/pasteboard/quirks-mode-br-1-expected.txt:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26944 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/editing/pasteboard/quirks-mode-br-1.html
+++ b/LayoutTests/editing/pasteboard/quirks-mode-br-1.html
@@ -11,4 +11,5 @@ var e = document.getElementById("test");
 
 s.setPosition(e, 0);
 s.modify("move", "forward", "line");
+document.execCommand("InsertHTML", false, "<br>");
 </script>
