--- a/LayoutTests/fast/dom/xmlhttprequest-html-response-encoding.html
+++ b/LayoutTests/fast/dom/xmlhttprequest-html-response-encoding.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Test XmlHttpRequest response encoding handling</title>
+</head>
 <body>
 <p>Test for <a href="http://bugs.webkit.org/show_bug.cgi?id=14288">bug 14288</a>:
 XMLHttpRequest doesn't use a correct content type for file:// URLs.</p>
