Rubber-stamped by Adam Roben.
        Update test to not intermittently fail.

        * http/tests/security/host-compare-case-insensitive-expected.txt:
        * http/tests/security/host-compare-case-insensitive.html:
        * http/tests/security/resources/cross-frame-iframe.html:
        * http/tests/security/resources/localhost-accesssor.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27259 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/http/tests/security/resources/cross-frame-iframe.html
+++ b/LayoutTests/http/tests/security/resources/cross-frame-iframe.html
@@ -1,5 +1,14 @@
 <html>
-<body>
+<head>
+    <script>
+        function fireSentinel()
+        {
+            if (window.layoutTestController)
+                layoutTestController.globalFlag = true;
+        }
+    </script>
+</head>
+<body onload="fireSentinel();">
     <p id='accessMe'></p>
     <p>Inner iframe.</p>
     <iframe name='flag'></iframe>
