Reviewed by Hyatt.
        Update test to cover
        <rdar://problem/5521068>
        Visibility not propagated correctly for children of a layer with z-index
        
        The fix for this was (accidentally) already checked in with r27277, 
        with retroactive r=hyatt.

        * fast/layers/layer-visibility.html:
        * platform/mac/fast/layers/layer-visibility-expected.checksum:
        * platform/mac/fast/layers/layer-visibility-expected.png:
        * platform/mac/fast/layers/layer-visibility-expected.txt:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27489 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/fast/layers/layer-visibility.html
+++ b/LayoutTests/fast/layers/layer-visibility.html
@@ -9,6 +9,7 @@
 //.invisible:hover { visibility: visible}
 .abstop { position: absolute; left:0; right:0; height:30px   }
 .abs { position: absolute; left:0; right:0; top:0; bottom:0 }
+.zindex { z-index: 1 }
 </style>
 
 <script>
@@ -387,6 +388,19 @@ ok
 <div id="22" class="invisible abstop red" >
 <div class="visible abs green">
 ok
+</div>
+</div>
+</div>
+</div>
+
+<div class=case>
+<div class=positioned-root>
+23 green box with word ok:
+<div class="invisible abstop red zindex" >
+<div class="abs red">
+<div class="visible abs green">
+ok
+</div>
 </div>
 </div>
 </div>
