2007-11-12  Mark Rowe  <mrowe@apple.com>
        * building/tools.html: Remove extra >.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27720 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitSite/building/tools.html
+++ b/WebKitSite/building/tools.html
@@ -48,6 +48,6 @@ Keep all the default options and click <b>Next</b> until the file is extracted a
 
 <p>Once you have installed your developer tools, the next step is
 <a href="checkout.html">getting the code</a>.</p>
-<?php>
+<?php
 include("../footer.inc");
 ?>
