Squashed commit of the following:
commit 3e6cb737b3b823b4bf177b9e0c2fcfcc38baf46d
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 16:22:36 2007 -0800

    Changelog for commit

commit 4be13a5ef17685368e68a76292b785c99da1d7f2
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 16:19:34 2007 -0800

    Make inspector work with new API

commit c500ed90c32b31fbc37a183c8ae5427f36b9ccc2
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 14:37:16 2007 -0800

    Woops!

commit c61b147f35a2801c340f82054d177914da6ccde5
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 11:45:40 2007 -0800

    Ander's review comments

commit f3dc2683acc5730cbab8758226adae3e35f7263b
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 12 18:05:21 2007 -0800

    Initial vcproj changes after the rebase

commit c8cf9be275479ff1fb39b911e5165f07fcd5ae34
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 12 18:02:30 2007 -0800

    Fixed Changelog a bit

commit c9790cde9b79e25690f1c0b34b9c1e77d2f4449f
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 12 16:53:48 2007 -0800

    Finish the rebase/trunk merge

commit 663ad85619ec677eb5c52bed3c59b8b3f50de624
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 6 11:54:26 2007 -0800

    VCProj changes for new SQL api + blind attempt at keeping qt/gtk going

commit 2aceeb3bdfa6894bb4e93c0b129867059e9cdad7
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 15:27:55 2007 -0800

    Changelog edit cleanup

commit a05f11fa4fa0ba935eb28df6d9628f29a4074d7a
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 15:25:27 2007 -0800

    Changelog entries and small style cleanup

commit a2d34a78d06f446f4bdb6ea1797dfb91cfc336fe
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 13:37:10 2007 -0800

    Minor edit

commit eaf0aa9c07cfeb54df312c130677ecbc60728c5f
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 13:32:20 2007 -0800

    Do version check at time of executeSql



--- a/WebKitSite/misc/DatabaseExample.html
+++ b/WebKitSite/misc/DatabaseExample.html
@@ -54,7 +54,7 @@ body {
 <script>
 var db;
 try {
-    db = openDatabase("NoteTest", "1.0");
+    db = openDatabase("NoteTest", "1.0", "HTML5 Database API example", 200000);
 } catch(err) { }
 
 if (!db) {
@@ -172,8 +172,12 @@ Note.prototype = {
     {
         this.cancelPendingSave();
 
-        db.executeSql("DELETE FROM WebKitStickyNotes WHERE id = ?", [this.id], function(result) {});
-
+        var note = this;
+        db.transaction(function(tx)
+        {
+            tx.executeSql("DELETE FROM WebKitStickyNotes WHERE id = ?", [note.id]);
+        });
+        
         var duration = event.shiftKey ? 2 : .25;
         this.note.style.webkitTransition = '-webkit-transform ' + duration + 's ease-in, opacity ' + duration + 's ease-in';
         this.note.offsetTop; // Force style recalc
@@ -209,13 +213,22 @@ Note.prototype = {
             delete this.dirty;
         }
 
-        db.executeSql("UPDATE WebKitStickyNotes SET note = ?, timestamp = ?, left = ?, top = ?, zindex = ? WHERE id = ?", [this.text, this.timestamp, this.left, this.top, this.zIndex, this.id], function(result) {});
+        var note = this;
+        db.transaction(function (tx)
+        {
+            tx.executeSql("UPDATE WebKitStickyNotes SET note = ?, timestamp = ?, left = ?, top = ?, zindex = ? WHERE id = ?", [note.text, note.timestamp, note.left, note.top, note.zIndex, note.id]);
+        });
     },
 
     saveAsNew: function()
     {
         this.timestamp = new Date().getTime();
-        db.executeSql("INSERT INTO WebKitStickyNotes (id, note, timestamp, left, top, zindex) VALUES (?, ?, ?, ?, ?, ?)", [this.id, this.text, this.timestamp, this.left, this.top, this.zIndex], function(result) {});
+        
+        var note = this;
+        db.transaction(function (tx) 
+        {
+            tx.executeSql("INSERT INTO WebKitStickyNotes (id, note, timestamp, left, top, zindex) VALUES (?, ?, ?, ?, ?, ?)", [note.id, note.text, note.timestamp, note.left, note.top, note.zIndex]);
+        }); 
     },
 
     onMouseDown: function(e)
@@ -271,39 +284,43 @@ Note.prototype = {
 
 function loaded()
 {
-    try {
-        db.executeSql("SELECT COUNT(*) FROM WebKitStickyNotes", [], function(result) { loadNotes(); });
-    } catch(err) {
-        db.executeSql("CREATE TABLE WebKitStickyNotes (id REAL UNIQUE, note TEXT, timestamp REAL, left TEXT, top TEXT, zindex REAL)", [], function(result) { loadNotes(); });
-    }
+    db.transaction(function(tx) {
+        tx.executeSql("SELECT COUNT(*) FROM WebkitStickyNotes", [], function(result) {
+            loadNotes();
+        }, function(tx, error) {
+            tx.executeSql("CREATE TABLE WebKitStickyNotes (id REAL UNIQUE, note TEXT, timestamp REAL, left TEXT, top TEXT, zindex REAL)", [], function(result) { 
+                loadNotes(); 
+            });
+        });
+    });
 }
 
 function loadNotes()
 {
-    db.executeSql("SELECT id, note, timestamp, left, top, zindex FROM WebKitStickyNotes", [], function(result) {
-        if (result.errorCode) {
-            alert('Failed to retrieve notes from database');
+    db.transaction(function(tx) {
+        tx.executeSql("SELECT id, note, timestamp, left, top, zindex FROM WebKitStickyNotes", [], function(tx, result) {
+            for (var i = 0; i < result.rows.length; ++i) {
+                var row = result.rows.item(i);
+                var note = new Note();
+                note.id = row['id'];
+                note.text = row['note'];
+                note.timestamp = row['timestamp'];
+                note.left = row['left'];
+                note.top = row['top'];
+                note.zIndex = row['zindex'];
+
+                if (row['id'] > highestId)
+                    highestId = row['id'];
+                if (row['zindex'] > highestZ)
+                    highestZ = row['zindex'];
+            }
+
+            if (!result.rows.length)
+                newNote();
+        }, function(tx, error) {
+            alert('Failed to retrieve notes from database - ' + error.message);
             return;
-        }
-
-        for (var i = 0; i < result.rows.length; ++i) {
-            var row = result.rows.item(i);
-            var note = new Note();
-            note.id = row['id'];
-            note.text = row['note'];
-            note.timestamp = row['timestamp'];
-            note.left = row['left'];
-            note.top = row['top'];
-            note.zIndex = row['zindex'];
-
-            if (row['id'] > highestId)
-                highestId = row['id'];
-            if (row['zindex'] > highestZ)
-                highestZ = row['zindex'];
-        }
-
-        if (!result.rows.length)
-            newNote();
+        });
     });
 }
 
